fix(app): fix mobile navbar covering content

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,7 +32,7 @@ body {
   padding-top: 64px;
 }
 @media screen and (max-width: 768px) {
-  body { padding-top: 0px; }
+  body { padding-top: 40px; }
 }
 
 .flex-center {
